[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "py_utils"
version = "0.5.0"
description = "Python utils collection, on my own style."
readme = "README.md"
license = { text = "MIT" }
authors = [ { name = "Victor Correal Ramos", email = "correal.ramos@gmail.com"} ]
requires-python = ">=3.7"

dependencies = [
    "termcolor",
    "f90nml",
    "PyYAML",
]

classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
]
