[metadata]
name = py_utils
version = 0.5.0
description = Python utils collection, on my own style.
long_description = file: README.md
long_description_content_type = text/markdown
author = Victor Correal Ramos
license = MIT
classifiers =
    Programming Language :: Python :: 3
    License :: OSI Approved :: MIT License
    Operating System :: OS Independent

[options]
packages = find:
python_requires = >=3.7
